apps/test-smoke/environments/hz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testsmoke-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    projectcontour.io/response-timeout: "60s"
spec:
  ingressClassName: contour
  tls:
    - hosts:
        - testsmoke.hz.metacpan.org
      secretName: testsmoke-tls
  rules:
    - host: testsmoke.hz.metacpan.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: testsmoke-web
                port:
                  number: 80
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: testsmoke-api
                port:
                  number: 80
